# wiremock

./: README.md  create_wiremock_project.sh  deletethis.py  docker-compose.yml  info.cmd  pyproject.toml  run_demo.py  setup_and_run.sh
src/: 3434.py  44rrr.py  6556.py  7454.py  delete.py  models.py  stub_generator.py  stub_loader.py  wiremock_client.py
src/setups/: mappings.txt
src/tests/: 444543.py  4545.py  5rr.txt  dddd.txt  dees.txt  dfdf.txt  fff.txt  fgfg.txt  gsfds.txt  ingess33.txt  no_data.txt  r4444.py  rrrr.txt  seed.txt  tests.txt
stubs/: config.json
stubs/customers/: premium.json  standard.json
stubs/orders/: failed.json  pending.json  success.json
stubs/payments/: authorized.json  declined.json  fraud.json
tests/: test_stub_loader.py
